<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nama_makul"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginRight="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

        <EditText
            android:id="@+id/et_nama_makul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/txt_nama_makul" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nama_dosen"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginRight="@dimen/dimen_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_nama_makul"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_nama_dosen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/txt_nama_dosen" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_lokasi_makul"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginRight="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_nama_dosen">

        <EditText
            android:id="@+id/et_lokasi_makul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/txt_password"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginRight="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/txt_register"
        android:background="@drawable/btn_login"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_lokasi_makul" />


</android.support.constraint.ConstraintLayout>